@@ -1,3 +1,7 @@
+v2016-07-13
+  * Modify "友情链接"
+  * Update themes
+
 v2016-06-28
   * Modify post "使用GPG签名Git提交和标签"
 
